css/styles.css
h1,h2,h3,body,ul,li { margin: 0; padding: 0 }
body {
  font-family: Verdana, Geneva, sans-serif;
  background: #e8e8e8;
  margin-top: 19px;
  width: 100%;
  height: 100%;
  text-align: center;
}
a {
  color: blue;
  cursor: pointer;
  text-decoration: none;
}
a:visited {
  color: blue;
}
b {
  font-weight: 500;
}
h1,h2,h3 {
  font-weight: 300;
}
h1 {
  margin-top: 0.25em;
}
h4 {
  font-weight: 300;
  font-size: 22px;
  margin: 0.5em 1%;
}
small {
  color: #444;
  font-size: 70%;
}
a:active {
  background: blue;
  color: white;
  box-shadow: 0 0 0px 5px blue;
}

.logo img {
  vertical-align: middle;
}
.login input {
  display: block;
  width: 100%;
  margin: 12px 0;
}
.waive-green {
  color: #25c155;
}
.map img {
  margin-top: 6px;
  min-height: 150px;
  width: 100%;
  background-image: url('/img/ajax-loader.gif');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center; 
}
.map {
  width: 100%;
  margin-bottom: 8px;
}
.map span {
  display: block;
}
#account-link {
  position: absolute;
  top: 0;
  right: 0;
  color: #44a;
  padding: 0px 5px 2px;
}
#account-link:active {
  color: white;
}
.button {
  text-align: center;
  display: inline-block;
  padding: 4px;
  font-size: 12px;
  border: 1px solid blue;
  color: blue;
  background: white;
}

.action-list {
  font-size: 0;
}
.action-list a {
  display: inline-block;
  font-size: 12px;
  margin: 2% 1%;
  padding: 2% 1%;
  text-align: center;
  font-size: 12px;
}
.box {
  display:block;
  text-align: left;
  background: white;
  padding: 1%;
  margin: 0 auto 6px auto;
  width: 94%;
  max-width: 400px;
  border-radius: 4px;
  box-shadow: 0 0 6px 2px rgba(96,96,96,0.2);
}
.center {
  text-align: center;
}
.account ul {
  margin-left: 1.25em;
}
.car-label, .car-distance {
  display: inline-block;
}
.car-label {
  width: 140px;
}
.car-name {
  font-size: 22px;
}
.login {
  padding: 5%;
  text-align: center;
  max-width: 85%;
}

.car-row {
  display:block;
  text-align: left;
  background: #fff;
  padding: 2%;
  margin-bottom: 3px;
  width: 96%;
}
.car-row  { 
  line-height: 28px;
}
.car-row .button {
  float:right;
  line-height: 16px;
}

.wid-1 {
  width: 98%;
  margin: -1px;
}
.wid-2 {
  width: 45.4%;
}
.image-upload {
  width: 38%;
  text-align: center;
  display: inline-block;
  border: 1px solid #888;
  position: relative;
  padding: 12% 4%;
  overflow: hidden;
}
.image-upload input {
  vertical-align: middle;
  position: absolute;
  top: 0;
  left: 0;
  font-size: 1000px;
  opacity: 0;
}
.danger {
  color: red !important;
  border: 1px solid red;
}
.needsjs {
  color: #aaa;
  text-decoration: none;
}
#sorter {
  text-align: center;
  margin-right: 10px;
}
#sorter a {
  margin: 0 0 0 10px;
}
.box.error {
  background: rgb(255,216,216);
  font-weight: 400;
  padding: 0.5em;
}
.fuel-meter {
  width: 100%;
  height: 3px;
  background: #ddd;
  margin-top: -3px;
}

.fuel-amount {
  height: 100%;
  background: #7d7;
}
.prompt .input {
  width: 100%;
  font-size: 14px;
  margin-top: 14px;
}

